# reflex-monaco-editor

./: .gitignore  BUILD  README.md  pants.toml  pyproject.toml  rxconfig.py  tsconfig.json
.github/workflows/: pr.yaml  pr_react.yaml  publish.yaml  publish_react.yaml  publish_react.yml
demo_workspace/: providers.tf
src/demo/: __init__.py  main.py
src/monaco_editors/: BUILD  __init__.py  base.py  config.py  constants.py  hashicorp-terraform.vsix  lifespan_tasks.py  models.py  terraform.py
src/react/: BUILD  package-lock.json  package.json
src/react/monaco-editor-enhanced/: BUILD  Editor.tsx  hcl.tsx  index.tsx  terraformFeatures.tsx
tests/: BUILD  conftest.py  test_base.py  test_config.py  test_constants.py  test_lifespan_tasks.py  test_models.py  test_terraform.py
